--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./Styles.css" />
@@ -16,7 +16,7 @@
     <header class="site-header" aria-label="Header">
       <div class="container header-inner">
         <a class="brand" href="#" aria-label="Halaweh">
-          <img class="brand-logo" src="./Assets/logo.jpg" alt="Halaweh" />
+          <img class="brand-logo" src="./Assets/Halaweh (1).png" alt="Halaweh" />
         </a>
 
         <div class="header-actions">
@@ -46,9 +46,9 @@
               <h1 class="hero-title" id="headline">
                 تجربة شتوية دافئة في مطعم حلاوة
               </h1>
-              <p class="hero-subtitle" id="subheadline">
+              <h2 class="hero-subtitle" id="subheadline">
                 بوفيه غداء و بوفيه عشاء كل خميس و جمعة و سبت
-              </p>
+              </h2>
             </div>
 
             <div class="hero-cta">
