add benefits section

--- a/Index.html
+++ b/Index.html
@@ -59,6 +59,55 @@
           </div>
         </div>
       </section>
+
+      <section class="benefits" aria-label="Benefits">
+        <div class="container benefits-container">
+          <div class="benefits-header">
+            <h3 class="benefits-subtitle" id="benefitsSubtitle">
+              بتدور على فعالية شتوية تجمع العائلة وتقدّم تجربة طعام متكاملة في أجواء دافئة؟
+            </h3>
+            <div class="benefits-divider"></div>
+            <h2 class="benefits-intro" id="benefitsIntro">بتجربتنا رح تستمتعوا بـ:</h2>
+          </div>
+
+          <div class="benefits-infographic">
+            <div class="central-image-container">
+              <img
+                src="./Assets/benefits image.jpg"
+                alt="Halaweh winter experience"
+                class="central-image"
+              />
+            </div>
+
+            <div class="benefit-points">
+              <div class="benefit-point" style="--angle: 0deg;">
+                <div class="benefit-icon">🍽️</div>
+                <span class="benefit-label" id="benefit1">مأكولات عربية</span>
+              </div>
+              <div class="benefit-point" style="--angle: 60deg;">
+                <div class="benefit-icon">🧁</div>
+                <span class="benefit-label" id="benefit2">حلويات عربية</span>
+              </div>
+              <div class="benefit-point" style="--angle: 120deg;">
+                <div class="benefit-icon">🍰</div>
+                <span class="benefit-label" id="benefit3">حلويات عالمية</span>
+              </div>
+              <div class="benefit-point" style="--angle: 180deg;">
+                <div class="benefit-icon">☕</div>
+                <span class="benefit-label" id="benefit4">مشروبات ساخنة</span>
+              </div>
+              <div class="benefit-point" style="--angle: 240deg;">
+                <div class="benefit-icon">🥤</div>
+                <span class="benefit-label" id="benefit5">مشروبات باردة</span>
+              </div>
+              <div class="benefit-point" style="--angle: 300deg;">
+                <div class="benefit-icon">🏠</div>
+                <span class="benefit-label" id="benefit6">أجواء شتوية عائلية</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="./Script.js"></script>
