--- a/Index.html
+++ b/Index.html
@@ -108,6 +108,152 @@
           </div>
         </div>
       </section>
+
+      <section class="buffets" aria-label="Buffets">
+        <div class="container buffets-container">
+          <div class="buffets-grid">
+            <div class="buffet-card buffet-lunch">
+              <div class="notebook-spiral">
+                <div class="spiral-hole"></div>
+                <div class="spiral-hole"></div>
+                <div class="spiral-hole"></div>
+              </div>
+              <div class="notebook-content">
+                <h3 class="buffet-title">بوفيه الغداء – 3:00 عصرًا</h3>
+                <div class="buffet-items">
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🍽️</span>
+                    <span class="buffet-text">مأكولات عربية</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🧁</span>
+                    <span class="buffet-text">حلويات عربية</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🍰</span>
+                    <span class="buffet-text">حلويات عالمية</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">☕</span>
+                    <span class="buffet-text">مشروبات ساخنة</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🥤</span>
+                    <span class="buffet-text">مشروبات باردة</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="buffet-card buffet-dinner">
+              <div class="notebook-spiral">
+                <div class="spiral-hole"></div>
+                <div class="spiral-hole"></div>
+                <div class="spiral-hole"></div>
+              </div>
+              <div class="notebook-content">
+                <h3 class="buffet-title">بوفيه العشاء – 8:00 مساءً</h3>
+                <div class="buffet-items">
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🍽️</span>
+                    <span class="buffet-text">مأكولات عربية</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🧁</span>
+                    <span class="buffet-text">حلويات عربية</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🍰</span>
+                    <span class="buffet-text">حلويات عالمية</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">☕</span>
+                    <span class="buffet-text">مشروبات ساخنة</span>
+                  </div>
+                  <div class="buffet-item">
+                    <span class="buffet-icon">🥤</span>
+                    <span class="buffet-text">مشروبات باردة</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="reviews" aria-label="Reviews">
+        <div class="container reviews-container">
+          <h3 class="reviews-title">شو قالوا ضيوفنا عن التجربة؟</h3>
+
+          <div class="reviews-grid">
+            <div class="review-card">
+              <button class="review-toggle" data-review="1">
+                <span class="review-question">ما رأيك بالأطباق الرئيسية؟</span>
+                <span class="review-arrow">▼</span>
+              </button>
+              <div class="review-answer" id="review-1">
+                <div class="review-customer-name">أحمد محمد</div>
+                <p>الأطباق كانت لذيذة جداً والنكهات الأصيلة للشرق الأوسط كانت واضحة في كل لقمة. خصوصاً المندي والكبسة كانوا متميزين!</p>
+              </div>
+            </div>
+
+            <div class="review-card">
+              <button class="review-toggle" data-review="2">
+                <span class="review-question">كيف كانت الأجواء العائلية؟</span>
+                <span class="review-arrow">▼</span>
+              </button>
+              <div class="review-answer" id="review-2">
+                <div class="review-customer-name">فاطمة أحمد</div>
+                <p>الأجواء كانت دافئة ومريحة جداً، مثالية للعائلات. الأطفال استمتعوا بالألعاب والجو الشتوي الجميل، والكبار استمتعوا بالأحاديث الودية.</p>
+              </div>
+            </div>
+
+            <div class="review-card">
+              <button class="review-toggle" data-review="3">
+                <span class="review-question">ما رأيك بالحلويات المقدمة؟</span>
+                <span class="review-arrow">▼</span>
+              </button>
+              <div class="review-answer" id="review-3">
+                <div class="review-customer-name">محمد علي</div>
+                <p>الحلويات كانت مذهلة! من الكنافة إلى البقلاوة، كل شيء كان طازجاً ولذيذاً. خصوصاً الكنافة بالقشطة كانت لا تُقاوم!</p>
+              </div>
+            </div>
+
+            <div class="review-card">
+              <button class="review-toggle" data-review="4">
+                <span class="review-question">هل تُوصي بزيارة المطعم في الشتاء؟</span>
+                <span class="review-arrow">▼</span>
+              </button>
+              <div class="review-answer" id="review-4">
+                <div class="review-customer-name">سارة حسن</div>
+                <p>بالتأكيد! الجلسات الداخلية دافئة والديكور الشتوي جميل جداً. البوفيه الشتوي تجربة لا تُفوت، خصوصاً مع الأسعار المعقولة والخدمة الممتازة.</p>
+              </div>
+            </div>
+
+            <div class="review-card">
+              <button class="review-toggle" data-review="5">
+                <span class="review-question">كيف وجدت جودة الخدمة؟</span>
+                <span class="review-arrow">▼</span>
+              </button>
+              <div class="review-answer" id="review-5">
+                <div class="review-customer-name">عمر خالد</div>
+                <p>الخدمة كانت ممتازة والموظفين كانوا ودودين جداً. كل ما نحتاجه كان متوفراً بسرعة والنظافة كانت في أعلى مستوياتها.</p>
+              </div>
+            </div>
+
+            <div class="review-card">
+              <button class="review-toggle" data-review="6">
+                <span class="review-question">ما رأيك بالمشروبات المقدمة؟</span>
+                <span class="review-arrow">▼</span>
+              </button>
+              <div class="review-answer" id="review-6">
+                <div class="review-customer-name">لينا محمود</div>
+                <p>المشروبات كانت متنوعة ومناسبة للفصل الشتوي. الشاي والقهوة كانوا ساخنين ولذيذين، والعصائر الطازجة كانت منعشة جداً.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="./Script.js"></script>
