add event details

--- a/Index.html
+++ b/Index.html
@@ -123,23 +123,23 @@
                 <div class="buffet-items">
                   <div class="buffet-item">
                     <span class="buffet-icon">🍽️</span>
-                    <span class="buffet-text">مأكولات عربية</span>
+                    <span class="buffet-text" id="lunch-arabic-cuisine">مأكولات عربية</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">🧁</span>
-                    <span class="buffet-text">حلويات عربية</span>
+                    <span class="buffet-text" id="lunch-arabic-desserts">حلويات عربية</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">🍰</span>
-                    <span class="buffet-text">حلويات عالمية</span>
+                    <span class="buffet-text" id="lunch-international-desserts">حلويات عالمية</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">☕</span>
-                    <span class="buffet-text">مشروبات ساخنة</span>
+                    <span class="buffet-text" id="lunch-hot-drinks">مشروبات ساخنة</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">🥤</span>
-                    <span class="buffet-text">مشروبات باردة</span>
+                    <span class="buffet-text" id="lunch-cold-drinks">مشروبات باردة</span>
                   </div>
                 </div>
               </div>
@@ -156,25 +156,100 @@
                 <div class="buffet-items">
                   <div class="buffet-item">
                     <span class="buffet-icon">🍽️</span>
-                    <span class="buffet-text">مأكولات عربية</span>
+                    <span class="buffet-text" id="dinner-arabic-cuisine">مأكولات عربية</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">🧁</span>
-                    <span class="buffet-text">حلويات عربية</span>
+                    <span class="buffet-text" id="dinner-arabic-desserts">حلويات عربية</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">🍰</span>
-                    <span class="buffet-text">حلويات عالمية</span>
+                    <span class="buffet-text" id="dinner-international-desserts">حلويات عالمية</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">☕</span>
-                    <span class="buffet-text">مشروبات ساخنة</span>
+                    <span class="buffet-text" id="dinner-hot-drinks">مشروبات ساخنة</span>
                   </div>
                   <div class="buffet-item">
                     <span class="buffet-icon">🥤</span>
-                    <span class="buffet-text">مشروبات باردة</span>
+                    <span class="buffet-text" id="dinner-cold-drinks">مشروبات باردة</span>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="kids-activities" aria-label="Kids Activities">
+        <div class="container kids-container">
+          <button class="kids-accordion-toggle" id="kidsToggle">
+            <h3 class="kids-title" id="kidsTitle"> اضغط لتعرف شو مجهزين لأطفالنا</h3>
+            <span class="kids-arrow">▼</span>
+          </button>
+          <div class="kids-content" id="kidsContent">
+            <div class="kids-activities-list">
+              <div class="kids-activity">
+                <span class="kids-icon">🎨</span>
+                <span class="kids-activity-text" id="kidsActivity1">ركن تلوين وأعمال يدوية</span>
+              </div>
+              <div class="kids-activity">
+                <span class="kids-icon">🧸</span>
+                <span class="kids-activity-text" id="kidsActivity2">ألعاب تفاعلية خفيفة</span>
+              </div>
+              <div class="kids-activity">
+                <span class="kids-icon">📖</span>
+                <span class="kids-activity-text" id="kidsActivity3">قصص وحكايات ممتعة</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="event-details" aria-label="Event Details">
+        <div class="container event-container">
+          <h3 class="event-title">تفاصيل الفعالية العائلية</h3>
+
+          <div class="event-card">
+            <div class="event-info">
+              <div class="event-item">
+                <span class="event-icon">💰</span>
+                <span class="event-text">سعر المقعد: <strong>20 دينار</strong></span>
+              </div>
+
+              <div class="event-item">
+                <span class="event-icon">📅</span>
+                <span class="event-text">الأيام: <strong>كل خميس، جمعة، وسبت</strong></span>
+              </div>
+
+              <div class="event-item">
+                <span class="event-icon">📆</span>
+                <span class="event-text">فترة الفعالية: <strong>من 20/1 ولمدة شهر</strong></span>
+              </div>
+
+              <div class="event-item event-times">
+                <span class="event-icon">🕒</span>
+                <div class="event-text">
+                  <strong>أوقات البوفيه:</strong>
+                  <div class="time-details">
+                    <div>الغداء: 3:00 عصرًا</div>
+                    <div>العشاء: 8:00 مساءً</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="event-item">
+                <span class="event-icon">⏳</span>
+                <span class="event-text">مدة الفعالية: <strong>3 ساعات</strong></span>
+              </div>
+
+              <div class="event-item">
+                <span class="event-icon">👥</span>
+                <span class="event-text">عدد المقاعد المتاحة: <strong>200</strong></span>
               </div>
             </div>
           </div>
